--- a/views/requestService.ejs
+++ b/views/requestService.ejs
@@ -74,7 +74,7 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="name">Location</div>
+                            <div class="name">Address</div>
                             <div class="value">
                                 <div class="input-group">
                                     <textarea class="textarea--style-6" name="location"
