--- a/views/requestService.ejs
+++ b/views/requestService.ejs
@@ -48,7 +48,7 @@
                             <div class="name">Phone Number</div>
                             <div class="value">
                                 <div class="input-group">
-                                    <input class="input--style-6" type="number" name="phone" placeholder="555-555-5555">
+                                    <input class="input--style-6" type="text" name="phone" placeholder="555-555-5555">
                                 </div>
                             </div>
                         </div>
@@ -86,7 +86,7 @@
                     </form>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn--radius-2 btn--blue-2" type="submit">Send Application</button>
+                    <button class="btn btn--radius-2 btn--blue-2" type="submit">Submit</button>
                 </div>
             </div>
         </div>
