--- a/views/requestService.ejs
+++ b/views/requestService.ejs
@@ -25,10 +25,10 @@
         <div class="wrapper wrapper--w900">
             <div class="card card-6">
                 <div class="card-heading">
-                    <h2 class="title">Request for Service</h2>
+                    <h2 class="title">Service Request</h2>
                 </div>
                 <div class="card-body">
-                    <form method="POST">
+                    <form id="repairForm" method="post">
                         <div class="form-row">
                             <div class="name">Requestor Name</div>
                             <div class="value">
