--- a/views/app/dashboard.ejs
+++ b/views/app/dashboard.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PWR / Tickets</title>
+    <title>PWR / Service Requests</title>
     <!-- Bootstraps -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <!-- Fontawesome -->
@@ -75,7 +75,7 @@
           <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 bg-light">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
               <h1 class="h2">Service Requests</h1>
-              <!-- <div class="btn-toolbar mb-2 mb-md-0">
+              <!-- div class="btn-toolbar mb-2 mb-md-0">
                 <div class="btn-group me-2">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
                   <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
@@ -84,12 +84,15 @@
                   <span data-feather="calendar"></span>
                   This week
                 </button>
-              </div> -->
+              </div-->
+            </div>
+            <div id="tableToolbar">
+              <button class="btn btn-secondary">New Request</button>
             </div>
             <table 
               id="table"
               data-toggle="table"
-              data-toolbar="#toolbar"              
+              data-toolbar="#tableToolbar"              
               data-search="true"
               data-icon-size="sm"
               data-single-select="true"
