--- a/views/requestService.ejs
+++ b/views/requestService.ejs
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Colorlib Templates">
 
     <!-- Title Page-->
-    <title>Street Repairs Request</title>
+    <title>Service Request</title>
 
     <!-- Font special for pages-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
@@ -28,7 +28,7 @@
                     <h2 class="title">Service Request</h2>
                 </div>
                 <div class="card-body">
-                    <form id="repairForm" method="post">
+                    <form action="https://capstone-team-3.herokuapp.com/api/tickets" method="post" id="repairForm">
                         <div class="form-row">
                             <div class="name">Requestor Name</div>
                             <div class="value">
