--- a/views/requestService.ejs
+++ b/views/requestService.ejs
@@ -82,7 +82,6 @@
                                 </div>
                             </div>
                         </div>
-
                     </form>
                 </div>
                 <div class="card-footer">
@@ -98,6 +97,7 @@
 
     <!-- Main JS-->
     <script src="js/global.js"></script>
+    <script src="js/request.js"></script>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
