--- a/views/requestService.ejs
+++ b/views/requestService.ejs
@@ -32,7 +32,7 @@
                         <div class="form-row">
                             <div class="name">Requestor Name</div>
                             <div class="value">
-                                <input class="input--style-6" type="text" name="full_name">
+                                <input class="input--style-6" type="text" name="requestor">
                             </div>
                         </div>
                         <div class="form-row">
@@ -56,7 +56,7 @@
                             <div class="name">Description</div>
                             <div class="value">
                                 <div class="input-group">
-                                    <textarea class="textarea--style-6" name="description"
+                                    <textarea class="textarea--style-6" name="details"
                                         placeholder="Description of damage"></textarea>
                                 </div>
                             </div>
@@ -77,15 +77,15 @@
                             <div class="name">Address</div>
                             <div class="value">
                                 <div class="input-group">
-                                    <textarea class="textarea--style-6" name="location"
+                                    <textarea class="textarea--style-6" name="address"
                                         placeholder="Address or description of location"></textarea>
                                 </div>
                             </div>
                         </div>
+                        <div class="card-footer">
+                            <button class="btn btn--radius-2 btn--blue-2" type="submit">Submit</button>
+                        </div>
                     </form>
-                </div>
-                <div class="card-footer">
-                    <button class="btn btn--radius-2 btn--blue-2" type="submit">Submit</button>
                 </div>
             </div>
         </div>
