--- a/app/css/dashboard.css
+++ b/app/css/dashboard.css
@@ -7,7 +7,8 @@ body {
   font-size: 0.875rem;
 }
 
-.feather {
+.feather,
+.fa {
   width: 16px;
   height: 16px;
   vertical-align: text-bottom;
@@ -47,7 +48,8 @@ body {
   color: #bcbcbc;
 }
 
-.sidebar .nav-link .feather {
+.sidebar .nav-link .feather,
+.sidebar .nav-link .fa {
   margin-right: 4px;
   color: inherit;
 }
@@ -114,11 +116,21 @@ body {
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
 
-/* table */
+/* toolbar */
 
-tr:nth-child(even) {
-  /*background-color: #EEEEF5;*/
+#btnNewRequest,
+#btnSaveRequest,
+#btnSaveRequest:focus,
+#btnNewRequest:focus {
+  background-color: #1b97da;
 }
+
+.btn:hover {
+  box-shadow: 1px 1px 4px 1px #00000055;
+  background-color: #1b97da;
+}
+
+/* table */
 
 .fixed-table-container {
   border: solid 1px #dee2e6;
@@ -126,4 +138,36 @@ tr:nth-child(even) {
 
 tbody {
   box-shadow: inset 0px 0px 4px -1px #00000055;
+}
+
+td.bold {
+  font-weight: bold;
+}
+
+tb.date {
+  max-width: 100px;
+}
+
+.actionButton,
+.detail-icon {
+  display: inline-block;
+  text-align: center;
+  margin: 0 1px;
+  width: 24px;
+  height: 24px;
+  border-radius: 12px;
+  border: solid 1px #EEE;
+}
+
+.actionButton:hover,
+.detail-icon:hover {
+  box-shadow: 1px 1px 3px 0 #00000055;  
+}
+
+span.detailLabel {
+  display: inline-block;
+  width: 80px;
+  margin-right: 10px;
+  text-align: right;
+  font-weight: 500;
 }
