--- a/views/app/dashboard.ejs
+++ b/views/app/dashboard.ejs
@@ -96,7 +96,7 @@
               data-click-to-select="true"
               data-virtual-scroll="true"
               data-undefined-text=""
-              data-url="<%= apiUrl %>"
+              data-url="../api/tickets"
               data-data-field="tickets"
               data-id-field="_id"
             >
