--- a/public/css/followUp.css
+++ b/public/css/followUp.css
@@ -15,17 +15,26 @@
 /*
  * Base structure
  */
+html,body{
+  height: 100%;
 
-body {
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
+ 
+body{
+  /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);*/
   background-color: #434648;
+  display: flex;
 }
 
 .cover-container {
   max-width: 42em;
 }
 
+main {
+  color: #151515;
+
+}
 
 /*
  * Header
@@ -35,7 +44,7 @@ header {
     background-color: #151515;
 }
 
-.nav-masthead .nav-link {
+.nav-masthead .nav-link_ {
   padding: .25rem 0;
   font-weight: 700;
   color: rgba(255, 255, 255, .5);
@@ -47,16 +56,55 @@ header {
 .nav-masthead .nav-link:focus {
   border-bottom-color: rgba(255, 255, 255, .25);
 }
-
+.navbar {
+  background-color: #151515;
+}
 .nav-masthead .nav-link + .nav-link {
   margin-left: 1rem;
 }
 
 .nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
+  color: rgb(5, 5, 5);
+  border-bottom-color: rgb(3, 3, 3);
+}
+.container{
+  display:flex;
+}
+.card_ 1{
+  position:absolute;
+  width: 310px;
+  height: 240px;
+  left: 163px;
+  top: 182px;
+}
+.card_ 2{
+  position:absolute;
+  width: 310px;
+  height: 240px;
+  left: 163px;
+  top: 182px;
+}
+.card-header_{
+  background-color: #EBEBEB;
+  border: 1px solid #bbbbbb;
+  box-sizing: border-box;
+  border-radius: 4px 4px 0px 0px;
+}
+.topcard .card-body {
+  height: 250px;
 }
 
+.card-title{
+  text-align: left !important;
+
+}
+.btn btn-primary{
+  background: #1B97DA;
+  border: 1px solid #CCCCCC;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0,0,0, 0.25);
+  border-radius: 8px;
+}
 /* Footer */
 footer {
     background-color: #151515;
