--- a/public/css/followUp.css
+++ b/public/css/followUp.css
@@ -15,6 +15,8 @@
 /*
  * Base structure
  */
+
+
 html,body{
   height: 100%;
 
@@ -24,24 +26,44 @@ body{
   /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);*/
   background-color: #434648;
-  display: flex;
+  
 }
 
-.cover-container {
-  max-width: 42em;
+
+.wrap {
+  min-height: 100vh;
+  padding-top: 80px;
+  position: relative;
 }
 
 main {
   color: #151515;
-
+  height: 100%;
+  background-color: #f8f9fa;
+  padding-top: 30px;
+  padding-bottom: 60px;
+}
+hr{
+  width:98% !important;
+  margin: 0 auto;
+  margin-bottom: 15px;
 }
 
+.container {
+  width: auto;
+  max-width: 1080px;
+}
 /*
  * Header
  */
 
 header {
     background-color: #151515;
+    width: 100%;
+    height: 80px;
+    line-height: 80px;
+    position: absolute;
+    top: 0%;
 }
 
 .nav-masthead .nav-link_ {
@@ -67,45 +89,36 @@ header {
   color: rgb(5, 5, 5);
   border-bottom-color: rgb(3, 3, 3);
 }
-.container{
-  display:flex;
-}
-.card_ 1{
-  position:absolute;
-  width: 310px;
-  height: 240px;
-  left: 163px;
-  top: 182px;
-}
-.card_ 2{
-  position:absolute;
-  width: 310px;
-  height: 240px;
-  left: 163px;
-  top: 182px;
-}
-.card-header_{
-  background-color: #EBEBEB;
-  border: 1px solid #bbbbbb;
-  box-sizing: border-box;
-  border-radius: 4px 4px 0px 0px;
+
+.card{
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .topcard .card-body {
   height: 250px;
 }
-
+.card-header{
+  font-size: 22px;
+  font-weight: bold;
+}
 .card-title{
   text-align: left !important;
+  font-size: 16px;
+  font-weight: bold;
 
 }
-.btn btn-primary{
+.buttonRequest{
   background: #1B97DA;
   border: 1px solid #CCCCCC;
-  box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0,0,0, 0.25);
-  border-radius: 8px;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
 }
 /* Footer */
 footer {
     background-color: #151515;
+    height: 40px;
+    line-height: 40px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
