--- a/public/css/main.css
+++ b/public/css/main.css
@@ -203,7 +203,7 @@ h1 {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 22px !important;
 }
 
 h3 {
@@ -614,8 +614,8 @@ textarea {
   font-size: 36px;
   font-weight: 700;
   text-align: left;
-  color: #fff;
-  margin-bottom: 24px;
+  color: #151515;
+  margin: 12px;
 }
 
 @media (max-width: 767px) {
