Added Yedou features

--- a/app/css/dashboard.css
+++ b/app/css/dashboard.css
@@ -117,6 +117,12 @@ body {
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
 
+/* Form */
+
+.form-control.bold {
+  font-weight: bold;
+}
+
 /* toolbar */
 
 #btnNewRequest,
@@ -145,6 +151,10 @@ td.bold {
   font-weight: bold;
 }
 
+thead {
+  position: sticky;
+  top: 0;
+}
 
 .actionButton,
 .detail-icon {
