--- a/views/app/dashboard.ejs
+++ b/views/app/dashboard.ejs
@@ -78,7 +78,7 @@
               <h1 class="h2">Service Requests</h1>
             </div>
             <div id="tableToolbar">
-              <button id="btnNewRequest" title="Create a new service request." class="btn btn-secondary btnBgColor" data-bs-toggle="modal" data-bs-target="#requestModal">New Request</button>
+              <button id="btnNewRequest" title="Create a new service request." class="btn btn-secondary btnBgColor" data-bs-toggle="modal" data-bs-target="#requestModal" onclick="openCreateDialog()">New Request</button>
             </div>
             <table 
               id="table"
@@ -103,6 +103,7 @@
               data-undefined-text=""
               data-url="../api/tickets"
               data-data-field="tickets"
+              data-unique-id="_id"
               data-id-field="_id"
             >
               <thead>
@@ -128,11 +129,58 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
-                    <p>I'm a Form!</p>
+                    <!-- Ticket Form -->
+                    <form id="requestForm"> 
+                      <input type="hidden" id="_id">
+                      <div class="form-group">
+                        <label for="number">Number</label>
+                        <input type="text" class="form-control bold" id="number" readonly>
+                      </div>
+                      <div class="form-group">
+                        <label for="requestor">Requestor</label>
+                        <input type="text" class="form-control" id="requestor" required>
+                      </div>
+                      <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" id="email" required>
+                      </div>
+                      <div class="form-group">
+                        <label for="phone">Phone</label>
+                        <input type="text" class="form-control" id="phone">
+                      </div>                    
+                      <div class="form-group">
+                        <label for="details">Details</label>
+                        <textarea class="form-control" id="details" required></textarea>
+                      </div>
+                      <div class="form-group">
+                        <label for="address">Address</label>
+                        <input type="text" class="form-control" id="address" required>
+                      </div>                      
+                      <div class="form-group">
+                        <label for="priority">Priority</label>                      
+                        <select id="priority" name="priority" class="form-select" required>
+                          <option value disabled selected> Select one </option>
+                          <option value="Low"> Low </option>
+                          <option value="Medium"> Medium </option> 
+                          <option value="Hight"> High </option> 
+                        </select>
+                      </div>
+                      <div class="form-group">
+                        <label for="status">Status</label>                      
+                        <select id="status" name="status" class="form-select" required> 
+                          <option value disabled selected> Select one </option>
+                          <option value="Pending"> Pending </option>
+                          <option value="Received"> Received </option> 
+                          <option value="In Progress"> In Progress </option> 
+                          <option value="Completed"> Completed </option> 
+                          <option value="Canceled"> Canceled </option>
+                        </select>
+                      </div>                     
+                    </form> 
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button id="btnSaveRequest" type="button" class="btn btn-primary">Save</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button id="btnSaveRequest" type="button" class="btn btn-primary" onclick="saveChanges()">Save</button>
                   </div>
                 </div>
               </div>
