--- a/app/css/dashboard.css
+++ b/app/css/dashboard.css
@@ -117,6 +117,14 @@ body {
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
 
+.user span {
+  vertical-align: middle;
+}
+
+.user img {
+  border-radius: 16px;
+}
+
 /* Form */
 
 .form-control.bold {
