--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,12 +81,12 @@
     </div>
     <% if(ticket) { %>
     <div class="mt-3 mb-0 alert alert-primary" role="alert">
-      A simple primary alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+      The request has been send succesfully, please write down the request # <strong>PWR <%= ticket.number =></strong> and the email <strong><%= ticket.email =></strong> to follow up on the status of your request.
     </div>
     <% } %>
     <% if(error) { %>
     <div class="mt-3 mb-0 alert alert-danger" role="alert" >
-      A simple danger alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+      An error has ocurred while processing request, please try again.
     </div>
     <% } %>
     <% if(ticket) { %>
