--- a/views/index.ejs
+++ b/views/index.ejs
@@ -81,7 +81,7 @@
     </div>
     <% if(ticket) { %>
     <div class="mt-3 mb-0 alert alert-primary" role="alert">
-      The request has been send succesfully, please write down the request # <strong>PWR <%= ticket.number =></strong> and the email <strong><%= ticket.email =></strong> to follow up on the status of your request.
+      The request has been send succesfully, please write down the request # <strong>PWR <%= ticket.number %></strong> and the email <strong><%= ticket.email %></strong> to follow up on the status of your request.
     </div>
     <% } %>
     <% if(error) { %>
